--- a/templates/home.html
+++ b/templates/home.html
@@ -9815,11 +9815,16 @@
                 <div class="footer-section">
                     <h3>Nano Banana Product</h3>
                     <ul class="footer-links">
-                        <li><a href="#">Nano Banana Features</a></li>
+                        <li><a href="/rus/blog1">Nano Banana Features</a></li>
                         <li><a href="/pricing">Pricing & Plans</a></li>
-                        <li><a href="#">Google Nano Banana API</a></li>
-                        <li><a href="#">Integration Guide</a></li>
-                        <li><a href="#">Enterprise Solutions</a></li>
+                        <li><a href="/rus/blog2">Us vs Others</a></li>
+                        <li><a href="/rus/blog3">Avatar with AI</a></li>
+                        <li><a href="/rus/blog4">Best tool to create instagram Photos 2025</a></li>
+                        <li><a href="/rus/blog5">Best For Ecommerce</a></li>
+                        <li><a href="/rus/blog6">How to Improve Image Quality</a></li>
+
+
+                        
                     </ul>
                 </div>
                 
