--- a/templates/blog1.html
+++ b/templates/blog1.html
@@ -11,6 +11,8 @@
       gtag('config', 'G-XQ345FT3ZE');
     </script>
 
+    <link rel="icon" href="/static/favicon.ico">
+
 
 
     <meta charset="UTF-8">
