--- a/templates/blog3.html
+++ b/templates/blog3.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQ345FT3ZE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XQ345FT3ZE');
+    </script>
+
+    <link rel="icon" href="/static/favicon.ico">
+
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Пошаговая инструкция как создать аватар нейросетью бесплатно в 2025 году. Лучшие сервисы, промпты и примеры для генерации аватарок AI.">
