--- a/templates/blog6.html
+++ b/templates/blog6.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQ345FT3ZE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XQ345FT3ZE');
+    </script>
+
+    <link rel="icon" href="/static/favicon.ico">
+
+
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn how to improve photo quality with AI in 2025. Google Nano Banana offers the most affordable solution for photo enhancement, upscaling, and restoration. Free guide with examples.">
