--- a/templates/home_dutch.html
+++ b/templates/home_dutch.html
@@ -8974,7 +8974,7 @@
                     <span style="font-size: 10px;">▼</span>
                 </button>
                 <div class="language-dropdown" id="languageDropdown">
-                    <div class="language-option active" data-lang="en" data-flag="🇬🇧" onclick="changeLanguage('en', '🇬🇧')">
+                    <div class="language-option" data-lang="en" data-flag="🇬🇧" onclick="changeLanguage('en', '🇬🇧')">
                         <span class="language-flag">🇬🇧</span>
                         <span>English</span>
                     </div>
@@ -8983,7 +8983,7 @@
                         <span>Русский</span>
                     </div>
 
-                    <div class="language-option" data-lang="nl" data-flag="🇳🇱" onclick="changeLanguage('nl', '🇳🇱')">
+                    <div class="language-option active" data-lang="nl" data-flag="🇳🇱" onclick="changeLanguage('nl', '🇳🇱')">
                         <span class="language-flag">🇳🇱</span>
                         <span>Nederlands</span>
                     </div>
