--- a/templates/new_russian_desktop.html
+++ b/templates/new_russian_desktop.html
@@ -8897,7 +8897,11 @@
                 </div>
             </div>
 
-            <a id="bugReportBtn">Сообщить об ошибке</a>
+<!--             <a id="bugReportBtn">Сообщить об ошибке</a>
+ -->
+            <a href="/web-design" target="_blank" class="bug-link hide-mobile">
+              Need Website ? <span class="new-badge">Try</span>
+            </a>
 
             <a href="/pricing" class="buy-credits-btn" id="headerBuyCreditsBtn">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
