--- a/templates/home_dutch.html
+++ b/templates/home_dutch.html
@@ -8956,7 +8956,13 @@
                 </div>
             </div>
 
-    <a id="bugReportBtn">Bug Melden</a>
+    <!-- <a id="bugReportBtn">Bug Melden</a> -->
+
+    <a href="/web-design" target="_blank" class="bug-link hide-mobile">
+              Need Website ? <span class="new-badge">Try</span>
+            </a>
+
+            
     <a href="/nanobananapro" target="_blank" class="bug-link hide-mobile">
       Nano Banana Pro <span class="new-badge">NIEUW</span>
     </a>
