--- a/templates/webDesignshowcase.html
+++ b/templates/webDesignshowcase.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQ345FT3ZE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XQ345FT3ZE');
+</script>
+
+
+
+   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beautiful Freelance Popup</title>
+    <title>Freelance Contact</title>
+
+    <link rel="icon" href="/static/favicon.ico">
     <style>
         * {
             margin: 0;
