--- a/templates/home.html
+++ b/templates/home.html
@@ -9818,9 +9818,9 @@
                     <ul class="footer-links">
                         <li><a href="#">Nano Banana Features</a></li>
                         <li><a href="/pricing">Pricing & Plans</a></li>
-                        <li><a href="#">Us vs Others</a></li>
-                        <li><a href="#">Avatar with AI</a></li>
-                        <li><a href="#">Best tool to create instagram Photos 2025</a></li>
+                        <li><a href="/rus/blog1">Us vs Others</a></li>
+                        <li><a href="/rus/blog2">Avatar with AI</a></li>
+                        <li><a href="/rus/blog3">Best tool to create instagram Photos 2025</a></li>
                         <li><a href="#">Best For Ecommerce</a></li>
                         <li><a href="#">How to Improve Image Quality</a></li>
 
